Squashing more Hound 'bugs'.
Former-commit-id: 234d5a0bdd6b9c4457535afb8918458e6481d9d0 [formerly 75611920d29b5de540cb1111aba3cee47178bd42]
Former-commit-id: 13db08a52df1c0a2857372c2aaec519f018087a4

--- a/frontend/app/assets/stylesheets/_homepage.scss
+++ b/frontend/app/assets/stylesheets/_homepage.scss
@@ -1,11 +1,11 @@
 /* Negate widths in homepage to go full-bleed, trim margin on global nav */
 body.homepage {
   .row-shipping-and-contact + .container > div.row {
-      max-width: none !important;
-    }
-    .row-shipping-and-contact + .container > div.row > .columns {
+    max-width: none !important;
+  }
+  .row-shipping-and-contact + .container > div.row > .columns {
     padding: 0;
-    }
+  }
   /* Set certain elements to have transparent backgrounds */
   .container:first-child,
   .global-menu-toggle,
@@ -454,7 +454,7 @@ body.homepage {
       float: left;
     }
     img {
-      margin: 30px 120px 0 120px;
+      margin: 30px 120px 0;
       float: right;
     }
     @media only screen and (max-width: 48em) {
@@ -466,7 +466,7 @@ body.homepage {
         font-size: (40px);
       }
       h2, img {
-        margin: 30px 0 0 0 !important;
+        margin: 30px 0 0 !important;
         float: none;
       }
     }
@@ -507,7 +507,7 @@ body.homepage {
 
 /* Rail area: 3 products side by side */
 .home-rail {
-  padding: 30px 0 35px 0;
+  padding: 30px 0 35px;
   text-align: center;
   background-color: #f3f3f3;
   & > div {
@@ -544,7 +544,7 @@ body.homepage {
     }
   }
   .product-details h3 {
-    margin: 1em 0 0 0;
+    margin: 1em 0 0;
   }
   .price {
     font-size: 1.125em;
